[web] [fix] breadcrumb / ancestor wrap breaking layout
Summary:
before: {F13132}
after: {F13131}

Test Plan: make sure it looks like the screen shot

Reviewers: atul, ashoat

Reviewed By: atul, ashoat

Subscribers: def-au1t, ashoat, palys-swm, Adrian, karol-bisztyga

Differential Revision: https://phabricator.ashoat.com/D3139

--- a/web/chat/chat-thread-list.css
+++ b/web/chat/chat-thread-list.css
@@ -60,6 +60,8 @@ p.breadCrumbs.unread {
 }
 span.breadCrumb {
   padding-right: 4px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 span.breadCrumb svg {
